# gymReact

./: LICENSE  README.md
backend/: README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 12feed229c92_init_schema.py  3cb95f230574_add_user_profiles_table.py  8078e68036da_add_onboarding_completed_at_column_in_.py  9a2a79e49c5c_initial.py
backend/docker/: README.md
backend/src/app/: main.py
backend/src/app/core/: config.py  database.py  security.py
backend/src/app/models/: user.py
backend/src/app/routers/: __init__.py  auth.py  profile.py  users.py
backend/src/app/schemas/: auth.py  profile.py
backend/tests/: conftest.py  test_auth.py  test_ping.py  test_profile.py  test_user.py
docs/: DEVLOG.md
mobile/: .gitignore  README.md  app.json  package-lock.json  package.json  tsconfig.json
mobile/app/: +not-found.tsx  _layout.tsx  about.tsx  index.tsx
mobile/app/(auth)/: _layout.tsx  login.tsx  onboarding.tsx  register.tsx
mobile/app/(modals)/: calendar.tsx
mobile/app/(onboarding)/: index.tsx
mobile/app/(tabs)/: _layout.tsx  about.tsx  index.tsx  newPage.tsx  settings.tsx
mobile/src/components/: BaseLayout.tsx  Card.tsx  Container.tsx  HeroStatsCard.tsx  WeekDays.tsx  WeekDaysComponent.tsx
mobile/src/mocks/: profile.mock.ts
mobile/src/services/: api.ts  auth.ts  authBridge.ts  authRuntime.ts  errors.ts  profile.ts
mobile/src/store/: auth.ts  dateStore.ts  profile.ts
mobile/src/theme/: ThemeProvider.tsx  colors.ts  palette.ts
mobile/src/types/: user.ts
(+15 files in other folders)
