[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend of App"
authors = ["Daniel <daniel.gil.romero24@gmail.com>"]
packages = [{ include = "app", from = "src" }]

[tool.poetry.dependencies]
python = "^3.13"  
fastapi = {extras = ["standard"], version = "^0.120.2"}
uvicorn = { version = "^0.38.0", extras = ["standard"] }
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pydantic-settings = "^2.11.0"
sqlalchemy = "^2.0.44"
alembic = "^1.17.1"
psycopg = {extras = ["binary"], version = "^3.2.12"}
argon2-cffi = "^25.1.0"
asyncpg = "^0.30.0"
black = "^25.9.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]
